sunday sermon screen media query and modification in other screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -54,79 +54,81 @@ body {
       body .content .top-nav .right .active {
         text-decoration: underline; }
   body .center-content {
-    top: 0%;
-    position: absolute;
-    margin: 270px 0px 0px 200px;
-    text-align: left; }
-    body .center-content h2 {
+    top: 200px;
+    width: 100%;
+    position: absolute; }
+    body .center-content .center-detail {
       width: 84%;
-      text-align: left;
-      font-family: inter, sans-serif;
-      font-size: 50px;
-      font-weight: 500;
-      color: white;
-      padding: 20px 0px; }
-    body .center-content p {
-      width: 60%;
-      font-family: manrope, sans-serif;
-      font-weight: 400;
-      font-size: 19px;
-      color: rgba(255, 255, 255, 0.612);
-      line-height: 1.5;
-      height: 115px;
-      margin-bottom: 40px; }
-    body .center-content a {
-      font-family: Montserrat, sans-serif;
-      font-size: 20px;
-      padding: 15px 35px;
-      text-decoration: none;
-      border-radius: 8px;
-      color: white;
-      background-color: #161718;
-      border: 0.2px solid white;
-      box-shadow: 0px 1px 10px white;
-      font-weight: bold; }
-    body .center-content a:hover {
-      background-image: url("https://framerusercontent.com/images/DzUnxO8nIp8NlFQ4Rralxbdu5jU.jpg?scale-down-to=4096"); }
+      margin: auto; }
+      body .center-content .center-detail h2 {
+        width: 84%;
+        text-align: left;
+        font-family: inter, sans-serif;
+        font-size: 50px;
+        font-weight: 500;
+        color: white;
+        padding: 20px 0px; }
+      body .center-content .center-detail p {
+        width: 60%;
+        font-family: manrope, sans-serif;
+        font-weight: 400;
+        font-size: 19px;
+        color: rgba(255, 255, 255, 0.612);
+        line-height: 1.5;
+        height: 115px;
+        margin-bottom: 40px; }
+      body .center-content .center-detail a {
+        font-family: Montserrat, sans-serif;
+        font-size: 20px;
+        padding: 15px 35px;
+        text-decoration: none;
+        border-radius: 8px;
+        color: white;
+        background-color: #161718;
+        border: 0.2px solid white;
+        box-shadow: 0px 1px 10px white;
+        font-weight: bold; }
+      body .center-content .center-detail a:hover {
+        background-image: url("https://framerusercontent.com/images/DzUnxO8nIp8NlFQ4Rralxbdu5jU.jpg?scale-down-to=4096"); }
   body footer {
     background-image: url("https://framerusercontent.com/images/rX3s5jtZ4spiYfb24VBSEi1nA.jpg?scale-down-to=4096");
     padding: 35px 0px;
     background-repeat: no-repeat;
     background-size: cover; }
-    body footer .row {
+    body footer .foot {
       width: 90%;
       margin: auto; }
-      body footer .row .col-5 {
+      body footer .foot .foot-one {
         padding: 0%; }
-        body footer .row .col-5 .logo-info .foot-logo {
+        body footer .foot .foot-one .logo-info .foot-logo {
           width: 60px;
           margin-left: 20px; }
-        body footer .row .col-5 .logo-info ul {
+        body footer .foot .foot-one .logo-info ul {
           list-style-type: none;
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 .logo-info ul li {
+          body footer .foot .foot-one .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 .logo-info ul li .org-name {
+            body footer .foot .foot-one .logo-info ul li .org-name {
               width: 255px; }
-            body footer .row .col-5 .logo-info ul li h4 {
+            body footer .foot .foot-one .logo-info ul li h4 {
               font-family: Montserrat, sans-serif;
               line-height: 2;
               color: white;
               font-size: 14px;
               font-weight: 600;
               margin: 0px; }
-      body footer .row .col-7 {
+      body footer .foot .foot-two {
         padding: 0%; }
-        body footer .row .col-7 .foot-menu {
+        body footer .foot .foot-two .foot-menu {
           list-style-type: none;
           margin-top: 140px;
           padding: 0%;
           text-align: right; }
-          body footer .row .col-7 .foot-menu li {
+          body footer .foot .foot-two .foot-menu li {
             display: inline;
             padding: 0px 8px; }
-            body footer .row .col-7 .foot-menu li a {
+            body footer .foot .foot-two .foot-menu li a {
               font-family: Montserrat, sans-serif;
               font-weight: 600;
               font-size: 14px;
@@ -155,209 +157,106 @@ body {
     color: black; }
 
 @media (max-width: 1024px) {
-  body .wrapper {
-    height: 700px; }
-    body .wrapper .my-video {
-      height: 700px; }
-  body .content .top-nav .left {
-    width: 15%;
-    padding: 25px; }
   body .content .top-nav .right {
-    width: 68%;
-    margin-top: 50px; }
+    width: 60%; }
+    body .content .top-nav .right a {
+      padding: 0px 10px;
+      font-size: 15px; }
   body .center-content {
-    margin: 225px 0px 0px 150px; }
-    body .center-content h2 {
-      font-size: 35px;
-      width: 75%; }
-    body .center-content p {
-      width: 65%;
-      font-size: 16px;
-      height: 90px; }
-    body .center-content a {
-      font-size: 16px;
-      padding: 13px 30px; }
+    top: 200px; }
+    body .center-content .center-detail h2 {
+      font-size: 40px;
+      font-weight: 500;
+      color: white;
+      padding: 15px 0px; }
+    body .center-content .center-detail p {
+      font-size: 17px;
+      margin-bottom: 35px; }
+    body .center-content .center-detail a {
+      font-size: 18px;
+      padding: 13px 33px; }
   body footer {
     padding: 30px 0px; }
-    body footer .row .col-5 .logo-info ul {
+    body footer .row .foot-one .logo-info ul {
       margin-left: 20px;
       padding: 0%; }
-      body footer .row .col-5 .logo-info ul li {
+      body footer .row .foot-one .logo-info ul li {
         margin: 10px 0px; }
-        body footer .row .col-5 .logo-info ul li .org-name {
+        body footer .row .foot-one .logo-info ul li .org-name {
           width: 255px; }
-    body footer .row .col-7 .foot-menu {
+    body footer .row .foot-two .foot-menu {
       margin-top: 140px; }
-      body footer .row .col-7 .foot-menu li a {
+      body footer .row .foot-two .foot-menu li a {
         font-size: 14px; } }
 
 @media (max-width: 768px) {
-  body .wrapper {
-    height: 600px; }
-    body .wrapper .my-video {
-      height: 600px; }
-  body .content .top-nav .left {
-    padding: 20px; }
-    body .content .top-nav .left img {
-      width: 70px; }
   body .content .top-nav .right {
-    float: right;
-    width: 70%;
-    margin-top: 40px; }
+    width: 70%; }
     body .content .top-nav .right a {
-      padding: 6px 8px;
-      font-size: 15px; }
-  body .center-content {
-    margin: 200px 0px 0px 130px; }
-    body .center-content h2 {
-      width: 85%;
-      font-size: 30px;
-      padding: 5px 0px; }
-    body .center-content p {
-      width: 75%;
-      font-size: 14px;
-      margin-bottom: 30px; }
-    body .center-content a {
-      font-size: 14px; }
-  body footer {
-    padding: 30px 0px; }
-    body footer .row .col-5 {
-      width: 60%; }
-      body footer .row .col-5 .logo-info {
-        margin-left: 80px; }
-        body footer .row .col-5 .logo-info ul {
-          margin-left: 20px;
-          padding: 0%; }
-          body footer .row .col-5 .logo-info ul li {
-            margin: 10px 0px; }
-            body footer .row .col-5 .logo-info ul li .org-name {
-              width: 255px; }
-    body footer .row .col-7 {
-      width: 30%; }
-      body footer .row .col-7 .foot-menu {
-        margin: 0px;
+      padding: 0px 10px;
+      font-size: 13px; }
+  body .center-content .center-detail h2 {
+    font-size: 36px;
+    padding: 13px 0px; }
+  body .center-content .center-detail p {
+    font-size: 14px;
+    margin-bottom: 0px; }
+  body .center-content .center-detail a {
+    font-size: 15px;
+    padding: 10px 25px; }
+  body footer .foot .foot-one {
+    width: 60%; }
+    body footer .foot .foot-one .logo-info {
+      margin-left: 40px; }
+      body footer .foot .foot-one .logo-info ul {
+        margin-left: 20px;
         padding: 0%; }
-        body footer .row .col-7 .foot-menu li {
+        body footer .foot .foot-one .logo-info ul li {
+          margin: 10px 0px; }
+          body footer .foot .foot-one .logo-info ul li .org-name {
+            width: 255px; }
+  body footer .foot .foot-two {
+    width: 30%; }
+    body footer .foot .foot-two .foot-menu {
+      margin-top: 20px; }
+      body footer .foot .foot-two .foot-menu li {
+        text-align: left; }
+        body footer .foot .foot-two .foot-menu li a {
           display: block;
-          text-align: left;
-          padding: 14px 8px; }
-          body footer .row .col-7 .foot-menu li a {
-            font-size: 14px; } }
+          font-size: 14px; } }
 
 @media (max-width: 736px) {
-  body .wrapper {
-    height: 500px; }
-    body .wrapper .my-video {
-      height: 500px; }
-  body .content .top-nav .left {
-    width: 15%;
-    float: left;
-    padding: 20px; }
-    body .content .top-nav .left img {
-      width: 70px; }
-  body .content .top-nav .right {
-    float: right;
-    width: 70%;
-    margin-top: 40px; }
-    body .content .top-nav .right a {
-      padding: 8px 10px;
-      font-size: 13px; }
   body .center-content {
-    margin: 150px 0px 0px 130px; }
-    body .center-content h2 {
-      font-size: 23px;
-      padding: 5px 0px; }
-    body .center-content p {
-      font-size: 13px;
-      margin-bottom: 15px; }
-    body .center-content a {
-      font-size: 13px; }
-  body footer {
-    padding: 30px 0px; }
-    body footer .row .foot-menu li a {
-      font-size: 12px; } }
+    top: 200px; }
+    body .center-content .center-detail h2 {
+      font-size: 35px;
+      padding: 13px 0px; }
+    body .center-content .center-detail p {
+      font-size: 14px;
+      margin-bottom: 20px; }
+    body .center-content .center-detail a {
+      font-size: 14px;
+      padding: 10px 25px; } }
 
 @media (max-width: 684px) {
-  body .wrapper {
-    height: 450px; }
-    body .wrapper .my-video {
-      height: 450px; }
-  body .content .top-nav .left {
-    width: 13%;
-    float: left;
-    padding: 20px; }
-    body .content .top-nav .left img {
-      width: 60px; }
   body .content .top-nav .right {
-    float: right;
-    width: 70%;
-    margin-top: 40px; }
+    width: 72%; }
     body .content .top-nav .right a {
-      font-size: 13px;
-      padding: 5px 7px; }
-  body .center-content {
-    margin-top: 150px; }
-    body .center-content h2 {
-      font-size: 20px;
-      padding: 5px 0px; }
-    body .center-content p {
-      font-size: 12px;
-      margin-bottom: 10px; }
-    body .center-content a {
-      padding: 13px 25px; }
-  body footer .row {
-    width: 95%; }
-    body footer .row .foot-menu {
-      margin-left: 20px; }
-      body footer .row .foot-menu li a {
-        font-size: 12px; } }
-
-@media (max-width: 667px) {
-  body .wrapper {
-    height: 500px; }
-    body .wrapper .my-video {
-      height: 500px; }
-  body .content .top-nav .right {
-    width: 73%; }
-    body .content .top-nav .right a {
+      padding: 0px 5px;
       font-size: 13px; }
-  body .center-content h2 {
-    font-size: 23px;
-    padding: 5px 0px; }
-  body .center-content p {
-    font-size: 13px;
-    margin-bottom: 10px; }
-  body .center-content a {
-    font-size: 13px;
-    margin: 0px 0px; }
-  body footer {
-    padding: 35px 0px; }
-    body footer .row .col-5 {
-      width: 60%; }
-      body footer .row .col-5 .logo-info {
-        margin-left: 40px; }
-        body footer .row .col-5 .logo-info ul {
-          margin-left: 20px;
-          padding: 0%; }
-          body footer .row .col-5 .logo-info ul li {
-            margin: 10px 0px; }
-            body footer .row .col-5 .logo-info ul li .org-name {
-              width: 255px; }
-    body footer .row .col-7 {
-      width: 30%; }
-      body footer .row .col-7 .foot-menu {
-        margin-top: 20px; }
-        body footer .row .col-7 .foot-menu li {
-          text-align: left; }
-          body footer .row .col-7 .foot-menu li a {
-            display: block;
-            font-size: 14px; } }
+  body .center-content {
+    top: 180px; }
+    body .center-content .center-detail h2 {
+      font-size: 30px;
+      padding: 13px 0px; }
+    body .center-content .center-detail p {
+      font-size: 14px;
+      margin-bottom: 20px; }
+    body .center-content .center-detail a {
+      font-size: 14px;
+      padding: 10px 25px; } }
 
-@media (max-width: 415px) {
-  body .wrapper {
-    height: 700px; }
-    body .wrapper .my-video {
-      height: 700px; }
+@media (max-width: 425px) {
   body .content .top-nav .left {
     width: 27%;
     float: left;
@@ -402,23 +301,102 @@ body {
     display: block;
     text-align: left; }
   body .center-content {
-    margin-top: 180px;
-    margin-left: 0px;
-    padding: 20px; }
-    body .center-content h2 {
+    top: 230px; }
+    body .center-content .center-detail h2 {
+      margin-left: 20px;
       font-size: 20px;
-      width: 80%;
-      margin: auto;
-      margin-bottom: 20px; }
-    body .center-content p {
+      padding: 10px 0px; }
+    body .center-content .center-detail p {
+      margin-left: 20px;
       font-size: 12px;
-      width: 80%;
-      margin: auto;
-      margin-bottom: 50px; }
-    body .center-content a {
+      margin-bottom: 0px;
+      width: 80%; }
+    body .center-content .center-detail a {
       font-size: 12px;
-      padding: 10px 12px;
-      margin-left: 35px; }
+      padding: 8px 15px;
+      margin-left: 20px; }
+  body footer {
+    padding: 30px 0px; }
+    body footer .row .col-5 {
+      width: 100%; }
+      body footer .row .col-5 .logo-info {
+        margin-left: 55px; }
+        body footer .row .col-5 .logo-info ul {
+          margin-left: 20px;
+          padding: 0%; }
+          body footer .row .col-5 .logo-info ul li {
+            margin: 10px 0px; }
+            body footer .row .col-5 .logo-info ul li .org-name {
+              width: 255px; }
+    body footer .row .col-7 {
+      width: 100%; }
+      body footer .row .col-7 .foot-menu {
+        margin-top: 0px; }
+        body footer .row .col-7 .foot-menu li {
+          text-align: center; }
+          body footer .row .col-7 .foot-menu li a {
+            display: block;
+            font-size: 14px; } }
+
+@media (max-width: 415px) {
+  body .content .top-nav .left {
+    width: 27%;
+    float: left;
+    padding: 20px; }
+    body .content .top-nav .left img {
+      width: 70px; }
+  body .content .top-nav .right {
+    float: right;
+    width: 70%;
+    margin-top: 30px; }
+    body .content .top-nav .right a {
+      display: none; }
+    body .content .top-nav .right .hamburger-icon {
+      display: block;
+      float: right;
+      margin: 0px 10px; }
+      body .content .top-nav .right .hamburger-icon i {
+        font-size: 20px; }
+  body .content .top-nav .right.responsive {
+    width: 150px;
+    background-color: rgba(68, 65, 65, 0.343);
+    position: relative;
+    border-radius: 5px;
+    z-index: 1; }
+    body .content .top-nav .right.responsive a {
+      display: block;
+      width: 200px;
+      padding: 15px 5px 15px 10px;
+      text-align: left; }
+    body .content .top-nav .right.responsive .hamburger-icon {
+      width: 35px;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0; }
+  body .content .top-nav .top-nav.responsive .right .hamburger-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0; }
+  body .content .top-nav .top-nav.responsive .right a {
+    display: block;
+    text-align: left; }
+  body .center-content {
+    top: 230px; }
+    body .center-content .center-detail h2 {
+      margin-left: 20px;
+      font-size: 20px;
+      padding: 10px 0px; }
+    body .center-content .center-detail p {
+      margin-left: 20px;
+      font-size: 12px;
+      margin-bottom: 0px;
+      width: 80%; }
+    body .center-content .center-detail a {
+      font-size: 12px;
+      padding: 8px 15px;
+      margin-left: 20px; }
   body footer {
     padding: 30px 0px; }
     body footer .row .col-5 {
@@ -443,36 +421,7 @@ body {
             font-size: 14px; } }
 
 @media (max-width: 375px) {
-  body .content .top-nav .left {
-    width: 15%;
-    float: left;
-    padding: 20px; }
-    body .content .top-nav .left img {
-      width: 70px; }
-  body .content .top-nav .right {
-    float: right;
-    width: 75%;
-    margin-top: 40px; }
-    body .content .top-nav .right a {
-      display: none; }
-    body .content .top-nav .right .hamburger-icon {
-      display: block;
-      float: right; }
-  body footer .row .col-5 .logo-info {
-    margin-left: 20px; }
-    body footer .row .col-5 .logo-info ul {
-      margin-left: 20px;
-      padding: 0%; }
-      body footer .row .col-5 .logo-info ul li {
-        margin: 10px 0px; }
-        body footer .row .col-5 .logo-info ul li .org-name {
-          width: 255px; }
-  body footer .row .col-7 {
-    width: 100%; }
-    body footer .row .col-7 .foot-menu {
-      margin-top: 0px; }
-      body footer .row .col-7 .foot-menu li {
-        text-align: center; }
-        body footer .row .col-7 .foot-menu li a {
-          display: block;
-          font-size: 14px; } }
+  body .center-content {
+    top: 200px; }
+    body .center-content .center-detail p {
+      margin-bottom: 10px; } }
