--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -45,7 +45,6 @@ body{
             width: 95%;
             margin: auto;
 
-
             .search-center-bar{
                 margin-bottom: 30px;
 
@@ -76,7 +75,6 @@ body{
                     outline: none;
                 }
 
-
                 p{
                     text-align: center;
                     margin: 20px;
@@ -89,6 +87,10 @@ body{
         .align-col{
             padding: 10px;
             width: 300px;
+
+            .filter-item{
+                width: 100%;
+            }
 
             h4{
                 font-family: $fontMonstserrat;
@@ -162,14 +164,10 @@ body{
                         margin:0px 10px;
                     }
                 }
-
-                
             }
-            
-
         }
         .align-right-col{
-            width: 850px;
+            width: 860px;
             padding: 0px;
             margin-left: 30px;
 
@@ -242,7 +240,7 @@ body{
             }
         }
         .bottom-pagination{
-            width: 200px;
+            width: 420px;
             margin: auto;
 
             .pagination{
@@ -282,9 +280,143 @@ body{
         }
 
     }
+}
 
-    .page-nav{
-        background-color: none;
-        color: red;
+@media (max-width:1025px){
+    body{
+        .sermon-div{
+            top: 150px;
+            .align-col{
+                width: 250px;
+
+                h4{
+                    font-size: 14px;
+                }
+
+                .search-speaker{
+                    font-size: 14px;
+                }
+                .sep-col-div{
+                    width: 500px;
+                }
+            }
+            .align-right-col{
+                width: 690px;
+                .task-list{
+                    height: 85px;
+                    padding: 17px;
+
+                    .task-title{
+                        h5{
+                            font-size: 17px;
+                        }
+                        p{
+                            font-size: 14px;
+                        }
+                    }
+                    .sermon-date{
+                        font-size: 14px;
+                    }
+
+                    .icon-media{
+
+                        .media-icon-div{
+                            padding: 6px;
+                            img{
+                                width: 22px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:768px){
+    body{
+        .sermon-div{
+            top: 150px;
+            .align-col{
+                width: 100%;
+
+                .filter-item{
+                    width: 50%;
+                }
+                h4{
+                    font-size: 14px;
+                }
+
+                .search-speaker{
+                    font-size: 14px;
+                }
+            }
+            .align-right-col{
+                width: 100%;
+                margin-left: 0%;
+
+                .task-list{
+                    height: 85px;
+                    padding: 17px;
+
+                    .task-title{
+                        h5{
+                            font-size: 17px;
+                        }
+                        p{
+                            font-size: 14px;
+                        }
+                    }
+                    .sermon-date{
+                        font-size: 14px;
+                    }
+
+                    .icon-media{
+
+                        .media-icon-div{
+                            padding: 6px;
+                            img{
+                                width: 22px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:736px){
+    body{
+        .book-image{
+            height: 1200px;
+        }
+    }
+}
+
+@media (max-width:415px){
+    body{
+        .book-image{
+            height: 1800px;
+        }
+
+        .sermon-div{
+            .align-col{
+                .filter-item{
+                    width: 100%;
+                }
+            }
+            .align-right-col{
+                .task-list{
+                    height: 160px;
+                    .task-title{
+                        display: block;
+                        p{
+                            padding: 5px 0px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
