--- a/styles/detail.scss
+++ b/styles/detail.scss
@@ -15,6 +15,14 @@ body{
         }
     }
 
+    .search-screen-img{
+        height: 2000px;
+
+        .book-image{
+            height: 100%;
+        }
+    }
+
     .detail-page-container{
         position: absolute;
         margin: auto;
@@ -40,6 +48,7 @@ body{
                 top: 240px;
                 left: 300px;
                 box-shadow: none;
+                cursor: pointer;
             }
 
             .content-detail{
@@ -85,6 +94,7 @@ body{
             }
 
         }
+
         .detail-notes{
             margin: 60px 40px 0px;
             text-align: left;
@@ -92,6 +102,128 @@ body{
             font-size: 16px;
             font-weight: 500;
             line-height: 30px;
+        }
+    }
+}
+
+@media (max-width:1024px){
+    body{
+        .detail-page-container{
+            .detail-vedio-div{
+                width: 500px;
+                .back-vedio-image{
+                    img{
+                        width: 500px;
+                    }
+                }
+                .vedio-icon{
+                    top: 130px;
+                    left: 200px;
+                }
+    
+                .content-detail{
+                    h4{
+                        font-size: 35px;
+                        text-align: center;
+                    }
+    
+                    .paster-date{
+                        width: 400px;
+                        p{
+                            font-size: 15px;
+                        }
+                    }
+    
+                    .download-opt{
+                        .put-border{
+                            .down-icon-sec{
+                                margin-bottom: 8px;
+                            }
+                        }
+                    }
+                }
+    
+            }
+            .detail-notes{
+                font-size: 15px;
+            }
+        }
+    }
+}
+
+@media (max-width:768px){
+    body{
+
+        .search-screen-img{
+            height: 2500px;
+    
+            .book-image{
+                height: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width:415px){
+    body{
+
+        .search-screen-img{
+            height: 3000px;
+    
+            .book-image{
+                height: 100%;
+            }
+        }
+
+        .detail-page-container{
+            .detail-vedio-div{
+                width: 300px;
+                .back-vedio-image{
+                    img{
+                        width: 300px;
+                    }
+                }
+                .vedio-icon{
+                    width: 50px;
+                    top: 90px;
+                    left: 130px;
+                }
+    
+                .content-detail{
+                    h4{
+                        font-size: 25px;
+                    }
+    
+                    .paster-date{
+                        width: 300px;
+                        p{
+                            font-size: 12px;
+                        }
+                    }
+    
+                    .download-opt{
+                        margin: 20px 0px;
+                        text-align: center;
+    
+    
+                        .put-border{
+                            .down-icon-sec{
+                                margin-bottom: 8px;
+                            }
+                            h6{
+                                margin-top: 5px;
+                                font-size: 12px;
+                                padding: 0px 20px;
+                            }
+                            
+                        }
+                    }
+                }
+    
+            }
+            .detail-notes{
+                font-size: 12px;
+            }
         }
     }
 }
