--- a/styles/index.css
+++ b/styles/index.css
@@ -156,7 +156,7 @@ body {
     background-color: rgba(255, 255, 255, 0);
     color: black; }
 
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
   body .content .top-nav .right {
     width: 60%; }
     body .content .top-nav .right a {
@@ -238,9 +238,9 @@ body {
       font-size: 14px;
       padding: 10px 25px; } }
 
-@media (max-width: 684px) {
+@media (max-width: 685px) {
   body .content .top-nav .right {
-    width: 72%; }
+    width: 73%; }
     body .content .top-nav .right a {
       padding: 0px 5px;
       font-size: 13px; }
@@ -317,46 +317,37 @@ body {
       margin-left: 20px; }
   body footer {
     padding: 30px 0px; }
-    body footer .row .col-5 {
+    body footer .foot .foot-one {
       width: 100%; }
-      body footer .row .col-5 .logo-info {
+      body footer .foot .foot-one .logo-info {
         margin-left: 55px; }
-        body footer .row .col-5 .logo-info ul {
+        body footer .foot .foot-one .logo-info ul {
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 .logo-info ul li {
+          body footer .foot .foot-one .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 .logo-info ul li .org-name {
+            body footer .foot .foot-one .logo-info ul li .org-name {
               width: 255px; }
-    body footer .row .col-7 {
+    body footer .foot .foot-two {
       width: 100%; }
-      body footer .row .col-7 .foot-menu {
+      body footer .foot .foot-two .foot-menu {
         margin-top: 0px; }
-        body footer .row .col-7 .foot-menu li {
+        body footer .foot .foot-two .foot-menu li {
           text-align: center; }
-          body footer .row .col-7 .foot-menu li a {
+          body footer .foot .foot-two .foot-menu li a {
             display: block;
             font-size: 14px; } }
 
 @media (max-width: 415px) {
   body .content .top-nav .left {
-    width: 27%;
-    float: left;
     padding: 20px; }
     body .content .top-nav .left img {
       width: 70px; }
   body .content .top-nav .right {
-    float: right;
     width: 70%;
     margin-top: 30px; }
     body .content .top-nav .right a {
       display: none; }
-    body .content .top-nav .right .hamburger-icon {
-      display: block;
-      float: right;
-      margin: 0px 10px; }
-      body .content .top-nav .right .hamburger-icon i {
-        font-size: 20px; }
   body .content .top-nav .right.responsive {
     width: 150px;
     background-color: rgba(68, 65, 65, 0.343);
@@ -399,24 +390,24 @@ body {
       margin-left: 20px; }
   body footer {
     padding: 30px 0px; }
-    body footer .row .col-5 {
+    body footer .foot .foot-one {
       width: 100%; }
-      body footer .row .col-5 .logo-info {
+      body footer .foot .foot-one .logo-info {
         margin-left: 55px; }
-        body footer .row .col-5 .logo-info ul {
+        body footer .foot .foot-one .logo-info ul {
           margin-left: 20px;
           padding: 0%; }
-          body footer .row .col-5 .logo-info ul li {
+          body footer .foot .foot-one .logo-info ul li {
             margin: 10px 0px; }
-            body footer .row .col-5 .logo-info ul li .org-name {
+            body footer .foot .foot-one .logo-info ul li .org-name {
               width: 255px; }
-    body footer .row .col-7 {
+    body footer .foot .foot-two {
       width: 100%; }
-      body footer .row .col-7 .foot-menu {
+      body footer .foot .foot-two .foot-menu {
         margin-top: 0px; }
-        body footer .row .col-7 .foot-menu li {
+        body footer .foot .foot-two .foot-menu li {
           text-align: center; }
-          body footer .row .col-7 .foot-menu li a {
+          body footer .foot .foot-two .foot-menu li a {
             display: block;
             font-size: 14px; } }
 
@@ -424,4 +415,5 @@ body {
   body .center-content {
     top: 200px; }
     body .center-content .center-detail p {
+      height: 130px;
       margin-bottom: 10px; } }
