--- a/styles/index.scss
+++ b/styles/index.scss
@@ -227,7 +227,7 @@ body{
     }
 }
 
-@media (max-width:1024px){
+@media (max-width:1025px){
     body{
         .content{
             .top-nav {
@@ -382,12 +382,12 @@ body{
     }
 }
 
-@media (max-width:684px){
+@media (max-width:685px){
     body{
         .content{
             .top-nav {
                 .right{
-                    width: 72%;
+                    width: 73%;
                     a {
                         padding: 0px 5px;
                         font-size: 13px;
@@ -511,8 +511,8 @@ body{
        
         footer{
             padding: 30px 0px;
-            .row{
-                .col-5{
+            .foot{
+                .foot-one{
                     width: 100%;
                     .logo-info{
                         margin-left: 55px;
@@ -529,7 +529,7 @@ body{
                         }
                     }
                 }
-                .col-7{
+                .foot-two{
                     width: 100%;
                     .foot-menu{
                         margin-top: 0px;
@@ -552,8 +552,6 @@ body{
         .content{
             .top-nav {
                 .left{
-                    width: 27%;
-                    float: left;
                     padding: 20px;
 
                     img{
@@ -562,23 +560,11 @@ body{
                 }
     
                 .right{
-                    float: right;
                     width: 70%;
                     margin-top: 30px;
 
                     a{
                         display: none;
-                    }
-
-                    .hamburger-icon {
-                        display: block;
-                        float: right;
-                        margin:0px 10px;
-
-
-                        i{
-                            font-size: 20px;
-                        }
                     }
                 }
                 .right.responsive{
@@ -643,8 +629,8 @@ body{
        
         footer{
             padding: 30px 0px;
-            .row{
-                .col-5{
+            .foot{
+                .foot-one{
                     width: 100%;
                     .logo-info{
                         margin-left: 55px;
@@ -661,7 +647,7 @@ body{
                         }
                     }
                 }
-                .col-7{
+                .foot-two{
                     width: 100%;
                     .foot-menu{
                         margin-top: 0px;
@@ -685,8 +671,10 @@ body{
             top: 200px;
             .center-detail{
                 p{
+                    height: 130px;
                     margin-bottom: 10px;
                 }
+                
             }
         }
     }
